--- a/YSI batch prediction.ipynb
+++ b/YSI batch prediction.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c1ccccc1\n",
+      "Clc1ccccc1\n",
       "C1CCCCC1\n"
      ]
     }
@@ -21,24 +21,15 @@
     "import requests\n",
     "import chemical_conversions\n",
     "\n",
-    "print(chemical_conversions.get_smiles_from_name('benzene')) #check for Name with benzene, should be 'c1ccccc1'\n",
+    "print(chemical_conversions.get_smiles_from_name('clorobenzene')) #check for Name with benzene, should be 'c1ccccc1'\n",
     "print(chemical_conversions.get_smiles_from_cas('110-82-7')) #check for CAS with cyclohexane, should be 'C1CCCCC1'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There is no SMILES. Use Name instead.\n",
-      "There is no Name. Use CAS instead.\n",
-      "error with CAS: 0-0-0, \t HTTP Error 500: INTERNAL SERVER ERROR\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -68,69 +59,93 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>None</td>\n",
+       "      <td>[N-]=[N+]=O</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0-0-0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>[N-]=[N+]=O</td>\n",
+       "      <td>CCC(C)C</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>10024-97-2</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>CCC(C)C</td>\n",
+       "      <td>CC(C)=O</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>78-78-4</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>CC(C)=O</td>\n",
+       "      <td>CCCC(C)C</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>67-64-1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>CCCC(C)C</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>107-83-5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>CCC(C)CC</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>96-14-0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>CCCCCC</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>110-54-3</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>CC1CCCC1</td>\n",
+       "      <th>403</th>\n",
+       "      <td>CCO[Si](OCC)(O[Si](C)(C)C)O[Si](C)(C)C</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>96-37-7</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>404</th>\n",
+       "      <td>COc1cc2c(cc1OC)C(=O)NCC2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>405</th>\n",
+       "      <td>COc1ccc(Oc2nonc2N)cc1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406</th>\n",
+       "      <td>CCO[Si](OCC)(O[Si](C)(C)C)O[Si](C)(C)C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>407</th>\n",
+       "      <td>CC(C)(C)[Si](C)(C)O[As](O[Si](C)(C)C(C)(C)C)O[...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>408 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        SMILES  Name         CAS\n",
-       "0         None   NaN       0-0-0\n",
-       "1  [N-]=[N+]=O   NaN  10024-97-2\n",
-       "2      CCC(C)C   NaN     78-78-4\n",
-       "3      CC(C)=O   NaN     67-64-1\n",
-       "4     CCCC(C)C   NaN    107-83-5\n",
-       "5     CCC(C)CC   NaN     96-14-0\n",
-       "6       CCCCCC   NaN    110-54-3\n",
-       "7     CC1CCCC1   NaN     96-37-7"
+       "                                                SMILES  Name  CAS\n",
+       "0                                          [N-]=[N+]=O   NaN  NaN\n",
+       "1                                              CCC(C)C   NaN  NaN\n",
+       "2                                              CC(C)=O   NaN  NaN\n",
+       "3                                             CCCC(C)C   NaN  NaN\n",
+       "4                                             CCC(C)CC   NaN  NaN\n",
+       "..                                                 ...   ...  ...\n",
+       "403             CCO[Si](OCC)(O[Si](C)(C)C)O[Si](C)(C)C   NaN  NaN\n",
+       "404                           COc1cc2c(cc1OC)C(=O)NCC2   NaN  NaN\n",
+       "405                              COc1ccc(Oc2nonc2N)cc1   NaN  NaN\n",
+       "406             CCO[Si](OCC)(O[Si](C)(C)C)O[Si](C)(C)C   NaN  NaN\n",
+       "407  CC(C)(C)[Si](C)(C)O[As](O[Si](C)(C)C(C)(C)C)O[...   NaN  NaN\n",
+       "\n",
+       "[408 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +158,7 @@
     "name_array = dataframe['Name'].to_numpy() #pass Name to an array called \"name_array\"\n",
     "cas_array = dataframe['CAS'].to_numpy() #pass CAS to an array called \"cas_array\"\n",
     "\n",
-    "if math.isnan(smiles_array[0]):\n",
+    "if type(smiles_array[0]) != str:\n",
     "    print('There is no SMILES. Use Name instead.') #if there is no SMILES, use Name\n",
     "    if type(name_array[0]) != str:\n",
     "        print('There is no Name. Use CAS instead.') #if there is no Name, use CAS\n",
@@ -164,23 +179,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No SMILES at row = 133\n",
+      "No SMILES at row = 268\n",
+      "No SMILES at row = 363\n"
+     ]
+    }
+   ],
    "source": [
     "# create an array of API strings with SMILES appended\n",
     "api_array = []\n",
     "for i in range(len(smiles_array)):\n",
     "    api = 'https://ysi.ml.nrel.gov/api/'\n",
-    "    if smiles_array[i] == None:\n",
-    "        smiles_array[i] = 'None'\n",
+    "    if type(smiles_array[i]) != str:\n",
+    "        smiles_array[i] = 'NO_SMILES'\n",
+    "        print('No SMILES at row =', i)\n",
     "    api += smiles_array[i]\n",
     "    api_array.append(api)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -189,8 +215,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No API response at row = 1 . Invalid Name = nan . Invalid CAS = 0-0-0\n",
-      "No API response at row = 2 . Invalid Name = nan . Invalid CAS = 10024-97-2\n"
+      "No API response at row = 0 . Invalid SMILES = [N-]=[N+]=O . Invalid Name = nan . Invalid CAS = nan\n",
+      "No API response at row = 126 . Invalid SMILES = N#CCc1[nH]cnc1N . Invalid Name = nan . Invalid CAS = nan\n",
+      "No API response at row = 133 . Invalid SMILES = no_SMILES . Invalid Name = nan . Invalid CAS = nan\n",
+      "No API response at row = 213 . Invalid SMILES = Cc1cc(C)c(C#N)c(C)c1 . Invalid Name = nan . Invalid CAS = nan\n",
+      "No API response at row = 268 . Invalid SMILES = no_SMILES . Invalid Name = nan . Invalid CAS = nan\n",
+      "No API response at row = 363 . Invalid SMILES = no_SMILES . Invalid Name = nan . Invalid CAS = nan\n",
+      "No API response at row = 401 . Invalid SMILES = N#CCn1c(C(F)F)nc2ccccc21 . Invalid Name = nan . Invalid CAS = nan\n"
      ]
     },
     {
@@ -224,85 +255,128 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>None</td>\n",
+       "      <td>[N-]=[N+]=O</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0-0-0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>[N-]=[N+]=O</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10024-97-2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>CCC(C)C</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>78-78-4</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>30.654342</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>CC(C)=O</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>67-64-1</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>13.0</td>\n",
        "      <td>6.289966</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>CCCC(C)C</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>107-83-5</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>36.7</td>\n",
        "      <td>37.096191</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>CCC(C)CC</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>96-14-0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>38.2</td>\n",
        "      <td>37.096191</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>CCCCCC</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>110-54-3</td>\n",
-       "      <td>30.4</td>\n",
-       "      <td>31.389208</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>CC1CCCC1</td>\n",
+       "      <th>403</th>\n",
+       "      <td>CCO[Si](OCC)(O[Si](C)(C)C)O[Si](C)(C)C</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>96-37-7</td>\n",
-       "      <td>50.3</td>\n",
-       "      <td>50.422357</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13.030004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>404</th>\n",
+       "      <td>COc1cc2c(cc1OC)C(=O)NCC2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>227.458124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>405</th>\n",
+       "      <td>COc1ccc(Oc2nonc2N)cc1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.967749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406</th>\n",
+       "      <td>CCO[Si](OCC)(O[Si](C)(C)C)O[Si](C)(C)C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13.030004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>407</th>\n",
+       "      <td>CC(C)(C)[Si](C)(C)O[As](O[Si](C)(C)C(C)(C)C)O[...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25.298155</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>408 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        SMILES  Name         CAS  measured YSI  predicted YSI\n",
-       "0         None   NaN       0-0-0           NaN            NaN\n",
-       "1  [N-]=[N+]=O   NaN  10024-97-2           NaN            NaN\n",
-       "2      CCC(C)C   NaN     78-78-4           NaN      30.654342\n",
-       "3      CC(C)=O   NaN     67-64-1          13.0       6.289966\n",
-       "4     CCCC(C)C   NaN    107-83-5          36.7      37.096191\n",
-       "5     CCC(C)CC   NaN     96-14-0          38.2      37.096191\n",
-       "6       CCCCCC   NaN    110-54-3          30.4      31.389208\n",
-       "7     CC1CCCC1   NaN     96-37-7          50.3      50.422357"
+       "                                                SMILES  Name  CAS  \\\n",
+       "0                                          [N-]=[N+]=O   NaN  NaN   \n",
+       "1                                              CCC(C)C   NaN  NaN   \n",
+       "2                                              CC(C)=O   NaN  NaN   \n",
+       "3                                             CCCC(C)C   NaN  NaN   \n",
+       "4                                             CCC(C)CC   NaN  NaN   \n",
+       "..                                                 ...   ...  ...   \n",
+       "403             CCO[Si](OCC)(O[Si](C)(C)C)O[Si](C)(C)C   NaN  NaN   \n",
+       "404                           COc1cc2c(cc1OC)C(=O)NCC2   NaN  NaN   \n",
+       "405                              COc1ccc(Oc2nonc2N)cc1   NaN  NaN   \n",
+       "406             CCO[Si](OCC)(O[Si](C)(C)C)O[Si](C)(C)C   NaN  NaN   \n",
+       "407  CC(C)(C)[Si](C)(C)O[As](O[Si](C)(C)C(C)(C)C)O[...   NaN  NaN   \n",
+       "\n",
+       "     measured YSI  predicted YSI  \n",
+       "0             NaN            NaN  \n",
+       "1             NaN      30.654342  \n",
+       "2            13.0       6.289966  \n",
+       "3            36.7      37.096191  \n",
+       "4            38.2      37.096191  \n",
+       "..            ...            ...  \n",
+       "403           NaN      13.030004  \n",
+       "404           NaN     227.458124  \n",
+       "405           NaN       9.967749  \n",
+       "406           NaN      13.030004  \n",
+       "407           NaN      25.298155  \n",
+       "\n",
+       "[408 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +388,7 @@
     "for i in range(len(api_array)):\n",
     "    response = requests.get(api_array[i]) #use APIs to get reponses via requests\n",
     "    if not response: #if the API reponses a invalid result, measured YSI and predicted YSI are set to None\n",
-    "        print('No API response at row =', i+1, '. Invalid Name =', name_array[i], '. Invalid CAS =', cas_array[i])\n",
+    "        print('No API response at row =', i, '. SMILES =', smiles_array[i], '. Name =', name_array[i], '. CAS =', cas_array[i])\n",
     "        ysi_measure_array.append(None)\n",
     "        ysi_predict_array.append(None)\n",
     "        continue\n",
@@ -332,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
